# ai-pronunciation-coach

./: .gitignore  LICENSE  PronunciationCoach.spec  README.md  pyproject.toml
scripts/: build_exe.ps1  launcher.py
src/pronunciation_coach/: __init__.py  app.py  cli.py  config.py  paths.py
src/pronunciation_coach/audio/: player.py  recorder.py
src/pronunciation_coach/core/: analysis.py  cluster_kb.py  ipa.py  phoneme_alignment.py  phoneme_kb.py  scoring.py  sentence_bank.py  shadowing_metrics.py  text_utils.py  word_alignment.py  word_metrics.py
src/pronunciation_coach/data/: clusters_kb.json  phoneme_kb.json  sentences_en.csv
src/pronunciation_coach/persistence/: db.py  repository.py  schema.sql
src/pronunciation_coach/providers/: base.py  factory.py  gemini.py  offline.py  openai_compat.py
src/pronunciation_coach/services/: interview_service.py  learning_engine.py  practice_service.py  progress_service.py  shadowing_service.py  workers.py
src/pronunciation_coach/speech/: asr.py  tts.py
src/pronunciation_coach/ui/: main_window.py  theme.py
src/pronunciation_coach/ui/pages/: home_page.py  interview_page.py  practice_page.py  progress_page.py  settings_page.py  shadowing_page.py
src/pronunciation_coach/ui/widgets/: phoneme_chip.py  (+2 more)
tests/: manual_app_smoke.py  manual_qt_repeat_smoke.py  manual_repeat_smoke.py  manual_smoke.py  test_analysis.py  test_ipa.py  test_offline_provider.py  test_phoneme_alignment.py  test_phoneme_kb.py  test_practice_deltas.py  test_repository.py  test_scoring.py  test_shadowing_metrics.py  test_word_alignment.py
