[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pronunciation-coach"
version = "0.1.0"
description = "Desktop AI pronunciation coach for English learners"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "faster-whisper>=1.0",
    "eng-to-ipa>=0.0.2",
    "httpx>=0.27",
    "jsonschema>=4.21",
    "pyttsx3>=2.90",
]
# torch/torchaudio (Silero neural TTS) are optional: install with .[tts-neural].
# Without them shadowing uses the Windows SAPI voice automatically.

[project.optional-dependencies]
tts-neural = ["torch>=2.0", "torchaudio>=2.0"]
g2p = ["g2p_en>=2.1"]
dev = ["pytest>=8"]

[project.scripts]
pronunciation-coach = "pronunciation_coach.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pronunciation_coach.data" = ["*.csv", "*.json"]
"pronunciation_coach.persistence" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
